--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -130,18 +130,13 @@
     </script>
 
     <main>
-      <section class="page page-center">
-         {{content}}
-      </section>
+      <section class="page page-center">{{content}}</section>
     </main>
 
     <footer class="general">
       <div class="intro">
         <h1>
-          <a
-            href="https://simpleanalytics.com/?ref=blog.simpleanalytics.com"
-            class="brand"
-          >
+          <a href="https://simpleanalytics.com/" class="brand">
             <svg
               style="width: 30px; height: 30px"
               xmlns="http://www.w3.org/2000/svg"
@@ -175,20 +170,15 @@
           <h3>Privacy</h3>
           <ul>
             <li>
-              <a
-                href="https://docs.simpleanalytics.com/what-we-collect?ref=blog.simpleanalytics.com"
+              <a href="https://docs.simpleanalytics.com/what-we-collect"
                 >What we collect</a
               >
             </li>
             <li>
-              <a
-                href="https://simpleanalytics.com/privacy?ref=blog.simpleanalytics.com"
-                >Privacy Policy</a
-              >
+              <a href="https://simpleanalytics.com/privacy">Privacy Policy</a>
             </li>
             <li>
-              <a
-                href="https://simpleanalytics.com/terms-of-service?ref=blog.simpleanalytics.com"
+              <a href="https://simpleanalytics.com/terms-of-service"
                 >Terms of Service</a
               >
             </li>
@@ -199,16 +189,10 @@
           <h3>Product</h3>
           <ul>
             <li>
-              <a
-                href="https://simpleanalytics.com/?ref=blog.simpleanalytics.com#signup"
-                >Pricing</a
-              >
+              <a href="https://simpleanalytics.com/">Pricing</a>
             </li>
             <li>
-              <a
-                href="https://simpleanalytics.com/roadmap?ref=blog.simpleanalytics.com"
-                >Roadmap</a
-              >
+              <a href="https://simpleanalytics.com/roadmap">Roadmap</a>
             </li>
           </ul>
         </div>
@@ -219,17 +203,11 @@
           <h3>Learn</h3>
           <ul>
             <li>
-              <a
-                href="https://docs.simpleanalytics.com/?ref=blog.simpleanalytics.com"
-                >Documentation</a
-              >
+              <a href="https://docs.simpleanalytics.com/">Documentation</a>
             </li>
             <li><a href="/">Blog</a></li>
             <li>
-              <a
-                href="https://simpleanalytics.com/team?ref=blog.simpleanalytics.com"
-                >Team</a
-              >
+              <a href="https://simpleanalytics.com/team">Team</a>
             </li>
           </ul>
         </div>
@@ -238,16 +216,10 @@
           <h3>Contact</h3>
           <ul>
             <li>
-              <a
-                href="https://simpleanalytics.com/contact?ref=blog.simpleanalytics.com"
-                >Email address</a
-              >
+              <a href="https://simpleanalytics.com/contact">Email address</a>
             </li>
             <li>
-              <a
-                href="https://simpleanalytics.com/contact?ref=blog.simpleanalytics.com"
-                >Contact form</a
-              >
+              <a href="https://simpleanalytics.com/contact">Contact form</a>
             </li>
             <li>
               <a
