Reinstall simple analytics

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -71,13 +71,12 @@
     <!-- Style -->
     <link rel="stylesheet" type="text/css" href="/app.css?v=3" />
 
-    <!-- Privacy friendly website statistics
+    <!-- Privacy friendly website statistics -->
     <script
       async
       src="https://scripts.simpleanalyticscdn.com/latest.js"
       referrerpolicy="no-referrer"
     ></script>
-    -->
   </head>
   <body class="">
     <nav>
