--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -315,5 +315,8 @@
           });
         });
     </script>
+    
+    <script async defer src="https://simple.theprivacynewsletter.com/latest.js"></script>
+    <noscript><img src="https://simple.theprivacynewsletter.com/noscript.gif" alt="" referrerpolicy="no-referrer-when-downgrade" /></noscript>
   </body>
 </html>
