--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -316,7 +316,7 @@
         });
     </script>
     
-    <script async defer src="https://simple.theprivacynewsletter.com/latest.js"></script>
-    <noscript><img src="https://simple.theprivacynewsletter.com/noscript.gif" alt="" referrerpolicy="no-referrer-when-downgrade" /></noscript>
+    <!-- empty void -->
+
   </body>
 </html>
