--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -316,9 +316,7 @@
         });
     </script>
     
-    <!-- 100% privacy friendly analytics -->
-    <script async defer src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
-    <noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif" alt="" referrerpolicy="no-referrer-when-downgrade" /></noscript>
+    <!-- An empty void -->
 
   </body>
 </html>
