Update X handle to @adriaandotcom

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,7 @@
 
     <!-- Social -->
     <meta name="twitter:site" content="@SimpleAnalytic" />
-    <meta name="twitter:creator" content="@AdriaanvRossum" />
+    <meta name="twitter:creator" content="@adriaandotcom" />
     <meta
       property="og:url"
       content="https://blog.simpleanalytics.com/subscribe"
@@ -315,10 +315,18 @@
           });
         });
     </script>
-    
-<!-- 100% privacy friendly analytics -->
-<script async defer src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
-<noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif" alt="" referrerpolicy="no-referrer-when-downgrade" /></noscript>
 
+    <!-- 100% privacy friendly analytics -->
+    <script
+      async
+      defer
+      src="https://scripts.simpleanalyticscdn.com/latest.js"
+    ></script>
+    <noscript
+      ><img
+        src="https://queue.simpleanalyticscdn.com/noscript.gif"
+        alt=""
+        referrerpolicy="no-referrer-when-downgrade"
+    /></noscript>
   </body>
 </html>
