--- a/_layouts/newsletter.html
+++ b/_layouts/newsletter.html
@@ -38,7 +38,7 @@
 
     <!-- Social -->
     <meta name="twitter:site" content="@SimpleAnalytic" />
-    <meta name="twitter:creator" content="@AdriaanvRossum" />
+    <meta name="twitter:creator" content="@adriaandotcom" />
     <meta
       property="og:url"
       content="https://blog.simpleanalytics.com/subscribe"
